# ncmdumper-gui

./: Cargo.toml
.github/workflows/: release.yml  rust.yml
src/: app.rs  main.rs
src/app/: convert.rs  metadata.rs  reducer.rs  style.rs  view.rs
src/app/res/: mod.rs
